Update link for 'friends of friends' section

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="sub-items" id="subItems">
             <a>audiomack</a>
             <a>liim</a>
-            <a>friends of friends</a>
+            <a href="/fof">friends of friends</a>
         </div>
     </div>
     
